# tanda_assistant

./: Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
notebooks/: strava-data.ipynb
src/tanda_assistant/api/: main.py
src/tanda_assistant/app/: app.py
src/tanda_assistant/common/: main.py
src/tanda_assistant/data/: visualizations.py
static/: index.html  styles.css
static/js/: chat.js  utils.js
templates/: index.html
tests/: test_api.py  test_tanda_assistant.py
